--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,33 @@
-.warning {
-   color: blue;
+html {
+   box-sizing: border-box;
+   font-size: 1em;
+   font-family: sans-serif;
+}
+
+*,
+*:before,
+*:after {
+   box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+ol,
+ul {
+   margin: 0;
+   padding: 0;
+}
+
+ol,
+ul {
+   list-style: none;
+}
+
+img {
+   max-width: 100%;
+   height: auto;
 }
