--- a/src/styles.css
+++ b/src/styles.css
@@ -31,3 +31,30 @@ img {
    max-width: 100%;
    height: auto;
 }
+
+.errorBoundary {
+   width: 60%;
+   height: auto;
+   display: block;
+   margin: 50px auto;
+   padding: 10px 0;
+   background: rgba(#df4652, 0.1);
+}
+
+.errorBoundary--title,
+.errorBoundary--error {
+   border-left: 2px solid #df4652;
+   padding: 5px 10px;
+   margin: 10px;
+   color: #df4652;
+   font-family: inherit;
+}
+
+.errorBoundary--title {
+   font-size: 24px;
+}
+
+.errorBoundary--error {
+   font-size: 16px;
+   margin-left: 20px;
+}
