--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,57 @@
-.warning {
+html {
+   box-sizing: border-box;
+   font-size: 1em;
+   font-family: sans-serif;
+}
+
+*,
+*:before,
+*:after {
+   box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+ol,
+ul {
+   margin: 0;
+   padding: 0;
+}
+
+ol,
+ul {
+   list-style: none;
+}
+
+img {
+   max-width: 100%;
+   height: auto;
+}
+
+.errorBoundary {
+   width: 60%;
+   height: auto;
+   display: block;
+   margin: 50px auto;
+   padding: 10px 0;
+   background: rgba(#df4652, 0.1);
+   &--title,
    &--error {
-      color: red;
+      border-left: 2px solid #df4652;
+      padding: 5px 10px;
+      margin: 10px;
+      color: #df4652;
+      font-family: inherit;
+   }
+   &--title {
+      font-size: 24px;
+   }
+   &--error {
+      font-size: 16px;
+      margin-left: 20px;
    }
 }
